--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -12,3 +12,8 @@ Style/StringLiteralsInInterpolation:
 
 Layout/LineLength:
   Max: 120
+
+Metrics/ClassLength:
+  Enabled: true
+  Exclude:
+    - "test/**/*"
